made the website interactive

--- a/index.html
+++ b/index.html
@@ -19,221 +19,7 @@
   <body
     class="bg-custom-Very-dark-blue font-rubik flex min-h-screen items-center justify-center"
   >
-    <main class="mx-auto my-2 w-9/10 max-w-5xl">
-      <div class="grid gap-8 md:grid-cols-4">
-        <div class="bg-custom-Dark-blue rounded-xl md:row-span-2">
-          <div
-            class="bg-custom-Blue flex items-center space-x-4 rounded-xl p-6 md:block"
-          >
-            <img
-              src="images/image-jeremy.png"
-              alt=""
-              class="size-15 rounded-full ring-2 ring-white"
-            />
-            <div class="md:my-8">
-              <p class="text-custom-Pale-Blue">Report for</p>
-              <h1 class="text-2xl font-thin text-white md:text-4xl">
-                Jeremy Robson
-              </h1>
-            </div>
-          </div>
-          <div
-            class="text-custom-Desaturated-blue flex items-center justify-between p-6 md:block md:space-y-5"
-          >
-            <div
-              class="js-timeframe-select-link cursor-pointer transition-colors duration-75 ease-in hover:text-white"
-              data-timeframe="daily"
-            >
-              Daily
-            </div>
-            <div
-              class="active js-timeframe-select-link cursor-pointer transition-colors duration-75 ease-in hover:text-white"
-              data-timeframe="weekly"
-            >
-              Weekly
-            </div>
-            <div
-              class="js-timeframe-select-link cursor-pointer transition-colors duration-75 ease-in hover:text-white"
-              data-timeframe="monthly"
-            >
-              Monthly
-            </div>
-          </div>
-        </div>
-
-        <div class="bg-custom-Light-red relative rounded-xl">
-          <img
-            src="images/icon-work.svg"
-            alt=""
-            class="absolute right-4 z-0 size-15"
-          />
-          <div
-            class="bg-custom-Dark-blue relative z-10 mt-10 cursor-pointer rounded-xl p-6"
-          >
-            <div class="flex items-center justify-between">
-              <h2 class="text-white">Work</h2>
-              <img
-                src="images/icon-ellipsis.svg"
-                alt=""
-                class="cursor-pointer"
-              />
-            </div>
-            <div
-              class="flex items-center justify-between gap-4 md:my-5 md:block"
-            >
-              <h3 class="text-3xl font-thin text-white md:text-5xl">32hrs</h3>
-              <p class="text-custom-Desaturated-blue md:my-2">
-                Last Week - <span>36hrs</span>
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="bg-custom-Soft-blue relative rounded-xl">
-          <img
-            src="images/icon-play.svg"
-            alt=""
-            class="absolute right-4 z-0 size-15"
-          />
-          <div
-            class="bg-custom-Dark-blue relative z-10 mt-10 cursor-pointer rounded-xl p-6"
-          >
-            <div class="flex items-center justify-between">
-              <h2 class="text-white">Play</h2>
-              <img
-                src="images/icon-ellipsis.svg"
-                alt=""
-                class="cursor-pointer"
-              />
-            </div>
-            <div
-              class="flex items-center justify-between gap-4 md:my-5 md:block"
-            >
-              <h3 class="text-3xl font-thin text-white md:text-5xl">10hrs</h3>
-              <p class="text-custom-Desaturated-blue md:my-2">
-                Last Week - <span>8hrs</span>
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="bg-custom-Light-study relative rounded-xl">
-          <img
-            src="images/icon-study.svg"
-            alt=""
-            class="absolute right-4 z-0 size-15"
-          />
-          <div
-            class="bg-custom-Dark-blue relative z-10 mt-10 cursor-pointer rounded-xl p-6"
-          >
-            <div class="flex items-center justify-between">
-              <h2 class="text-white">Study</h2>
-              <img
-                src="images/icon-ellipsis.svg"
-                alt=""
-                class="cursor-pointer"
-              />
-            </div>
-            <div
-              class="flex items-center justify-between gap-4 md:my-5 md:block"
-            >
-              <h3 class="text-3xl font-thin text-white md:text-5xl">4hrs</h3>
-              <p class="text-custom-Desaturated-blue md:my-2">
-                Last Week - <span>7hrs</span>
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="bg-custom-Lime-green relative rounded-xl">
-          <img
-            src="images/icon-exercise.svg"
-            alt=""
-            class="absolute right-4 z-0 size-15"
-          />
-          <div
-            class="bg-custom-Dark-blue relative z-10 mt-10 cursor-pointer rounded-xl p-6"
-          >
-            <div class="flex items-center justify-between">
-              <h2 class="text-white">Exercise</h2>
-              <img
-                src="images/icon-ellipsis.svg"
-                alt=""
-                class="cursor-pointer"
-              />
-            </div>
-            <div
-              class="flex items-center justify-between gap-4 md:my-5 md:block"
-            >
-              <h3 class="text-3xl font-thin text-white md:text-5xl">4hrs</h3>
-              <p class="text-custom-Desaturated-blue md:my-2">
-                Last Week - <span>5hrs</span>
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="bg-custom-Violet relative rounded-xl">
-          <img
-            src="images/icon-social.svg"
-            alt=""
-            class="absolute right-4 z-0 size-15"
-          />
-          <div
-            class="bg-custom-Dark-blue relative z-10 mt-10 cursor-pointer rounded-xl p-6"
-          >
-            <div class="flex items-center justify-between">
-              <h2 class="text-white">Social</h2>
-              <img
-                src="images/icon-ellipsis.svg"
-                alt=""
-                class="cursor-pointer"
-              />
-            </div>
-            <div
-              class="flex items-center justify-between gap-4 md:my-5 md:block"
-            >
-              <h3 class="text-3xl font-thin text-white md:my-2 md:text-5xl">
-                5hrs
-              </h3>
-              <p class="text-custom-Desaturated-blue">
-                Last Week - <span>10hrs</span>
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="bg-custom-Soft-orange relative rounded-xl">
-          <img
-            src="images/icon-self-care.svg"
-            alt=""
-            class="absolute right-4 z-0 size-15"
-          />
-          <div
-            class="bg-custom-Dark-blue relative z-10 mt-10 cursor-pointer rounded-xl p-6"
-          >
-            <div class="flex items-center justify-between">
-              <h2 class="text-white">Self Care</h2>
-              <img
-                src="images/icon-ellipsis.svg"
-                alt=""
-                class="cursor-pointer"
-              />
-            </div>
-            <div
-              class="flex items-center justify-between gap-4 md:my-5 md:block"
-            >
-              <h3 class="text-3xl font-thin text-white md:my-2 md:text-5xl">
-                2hrs
-              </h3>
-              <p class="text-custom-Desaturated-blue">
-                Last Week - <span>2hrs</span>
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </main>
+    <main class="js-container mx-auto my-2 w-9/10 max-w-5xl"></main>
 
     <script src="script/script.js" type="module"></script>
   </body>
